fixes bug in Firefox when using stretch-tabs

--- a/app/styles/components/tabs.scss
+++ b/app/styles/components/tabs.scss
@@ -126,7 +126,7 @@ md-tabs-wrapper {
       display: flex;
       flex-direction: row;
       md-tab-item {
-        flex: 1;
+        flex-grow: 1;
       }
     }
   }
@@ -262,6 +262,7 @@ md-tab {
   text-transform: uppercase;
   float: left;
   font-weight: 500;
+  box-sizing: border-box;
   &.md-focus {
     box-shadow: none;
     outline: none;
